css fixes from basecamp, colors alignment stlying and some cut offs

--- a/static_source/sass/facility_detail.scss
+++ b/static_source/sass/facility_detail.scss
@@ -1,5 +1,5 @@
 .facility-detail {
-    background-color: $grey-background;
+    background-color: $beige-background;
     
 
     hr {
@@ -39,7 +39,7 @@
             font-size: 16px;
         }
 
-        p.heart {
+        .heart {
             float:right;
             margin-top: -40px;
             margin-right: 80px;
