--- a/static_source/sass/index.scss
+++ b/static_source/sass/index.scss
@@ -61,7 +61,7 @@
       font-size:14px;
       color:$black;
     }
-    a {
+    a.learn-more {
       font-size: 12px;
       text-decoration:none;
       color:$black;
